XBEAN-90 Pull in all the <classifier>sources</classifier> dependencies and feed them to qdox to make a more comprehensive xsd
git-svn-id: https://svn.apache.org/repos/asf/geronimo/xbean/trunk@551709 13f79535-47bb-0310-9956-ffa450edef68